Bug 360559 - Duplicate entry in systray context menu
Summary: Duplicate entry in systray context menu
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: System Tray widget (other bugs)
Version First Reported In: 5.5.5
Platform: Kubuntu Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-03-15 14:12 UTC by Laurent Bonnaud
Modified: 2016-03-17 15:37 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot (10.56 KB, image/png)
2016-03-15 14:12 UTC, Laurent Bonnaud
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Laurent Bonnaud 2016-03-15 14:12:08 UTC
When I do a right click on the clipboard or bluetooth mini-icons in the systray, I see those 2 menu entries:

 - "System Tray Options" 
 - "System tray Options"

This is with neon packages as of today:

Package: plasma-workspace
Version: 4:5.5.4+git20160315.1136+15.10-0


Reproducible: Always
Comment 1 Laurent Bonnaud 2016-03-15 14:12:55 UTC
Created attachment 97912 [details]
Screenshot
Comment 2 Marco Martin 2016-03-17 14:06:46 UTC
Git commit b09cb77e51f2b3f62170896f4a5274018df68cf6 by Marco Martin.
Committed on 17/03/2016 at 14:06.
Pushed by mart into branch 'master'.

Remove systray menu from context menus

show the systray context menu only on systray, not the syb applets
Related: bug 360301

M  +0    -29   applets/systemtray/systemtray.cpp

http://commits.kde.org/plasma-workspace/b09cb77e51f2b3f62170896f4a5274018df68cf6
Comment 3 Laurent Bonnaud 2016-03-17 15:37:07 UTC
Thank you for the fix!