Remove systray menu from context menus

show the systray context menu only on systray, not the syb applets
BUG:360559
BUG:360301